--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isometric Cube</title>
+    <title>CSS Emoji</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="left"></div>
-        <div class="right"></div>
-        <div class="top"></div>
-    </div>
+    <div class="emoji">
+        <div class="eyes">
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+        </div>
 
+        
+        <div class="mouth">
+            <div class="teeth"></div>
+            <div class="tongue"></div>
+        </div>
+
+    </div>
 </body>
 
 </html>
