--- a/index.html
+++ b/index.html
@@ -4,24 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Emoji</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="emoji">
-        <div class="eyes">
-            <div class="eye left"></div>
-            <div class="eye right"></div>
-        </div>
 
-        
-        <div class="mouth">
-            <div class="teeth"></div>
-            <div class="tongue"></div>
-        </div>
-
+    <div class="shield">
+        <div class="star"></div>
     </div>
+    <!-- .shield>.star -->
 </body>
 
 </html>
