--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-
-    <div class="shield">
-        <div class="star"></div>
+    <div class="container">
+        <div class="ghost">
+            <div class="face">
+                <div class="eyes">
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="smile"></div>
+            </div>
+        </div>
     </div>
-    <!-- .shield>.star -->
 </body>
 
 </html>
